"UV Map" node display issue in Material shading mode #40658

Closed
opened 2014-06-16 16:39:01 +02:00 by filip mond · 12 comments

System Information
OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB

Blender Version
Blender 2.70 Hash:3f2b023

Short description of error
"UV Map" node use only one UV Layout in Material shading mode.

Exact steps for others to reproduce the error
It seems like new "UV Map" node ignores others UV Layouts in Material shading mode.
Render is OK. (Tested for backfacing purpose only - with two UV layouts.)

Previously used "Attribute" node for assigning UV layout displays texture OK.

Attachment - Just open my blend and check result of "UV map" node in 3D window and what displays "Attribute" node when connected.
Thank you.

test_UVmap_Node_Display.blend

**System Information** OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB **Blender Version** Blender 2.70 Hash:3f2b023 **Short description of error** "UV Map" node use only one UV Layout in Material shading mode. **Exact steps for others to reproduce the error** It seems like new "UV Map" node ignores others UV Layouts in Material shading mode. Render is OK. (Tested for backfacing purpose only - with two UV layouts.) Previously used "Attribute" node for assigning UV layout displays texture OK. Attachment - Just open my blend and check result of "UV map" node in 3D window and what displays "Attribute" node when connected. Thank you. [test_UVmap_Node_Display.blend](https://archive.blender.org/developer/F94453/test_UVmap_Node_Display.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond
Brecht Van Lommel was assigned by Sergey Sharybin 2014-06-17 10:04:11 +02:00

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

Not really sure if it's a bug of feature, non-rendered viewport uses active UV Map, not the one from the material, which kind of make sense when you're working on UV map and want to have a feedback on it..

@brecht, can you please have a look here? Feel free to re-assign back to me if you consider GLSL is to respect UV maps coming from the nodes.

Not really sure if it's a bug of feature, non-rendered viewport uses active UV Map, not the one from the material, which kind of make sense when you're working on UV map and want to have a feedback on it.. @brecht, can you please have a look here? Feel free to re-assign back to me if you consider GLSL is to respect UV maps coming from the nodes.

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Author

From that point of view is a bug how Attribute node displays UV?

Anyway, what I tried - doesn't matter what UV layout is active, viewport displays the same.

Like now it doesn't make sense either, how does it can be useful to see backside material with UV layout of frontside material?

I came to this issue across this flipping faces (see attach) where i must to flip UV rows for back side to display texture correctly when they turns to front. Even it was clear how to flip rows of faces, when i connected nodes it was wrong so i began to switch inputs to corrected them right and … in this time of experimenting (or hunting the problem), visual feedback is needed.
Doesn't seems to be the best way to see what I'm doing only from render.

So, from my opinion Attribute node displays material right, UVmap doesn't.
Thank you for you attention.

test-UnfoldTransition.blend

From that point of view is a bug how Attribute node displays UV? Anyway, what I tried - doesn't matter what UV layout is active, viewport displays the same. Like now it doesn't make sense either, how does it can be useful to see backside material with UV layout of frontside material? I came to this issue across this flipping faces (see attach) where i must to flip UV rows for back side to display texture correctly when they turns to front. Even it was clear how to flip rows of faces, when i connected nodes it was wrong so i began to switch inputs to corrected them right and … in this time of experimenting (or hunting the problem), visual feedback is needed. Doesn't seems to be the best way to see what I'm doing only from render. So, from my opinion Attribute node displays material right, UVmap doesn't. Thank you for you attention. [test-UnfoldTransition.blend](https://archive.blender.org/developer/F94634/test-UnfoldTransition.blend)
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I think this is essentially the same issue as in #39868: The "active" element (uv map, texture, material, etc.) is traditionally defined by a list selection, but for workflow and usability it would make more sense to use node editor selection. But this is also far less transparent, you can still have multiple node editors with different shaders being edited, and node groups also have to be taken into account, leading to long chains of "active elements" in the context that define the ultimate selection.

I think this is essentially the same issue as in #39868: The "active" element (uv map, texture, material, etc.) is traditionally defined by a list selection, but for workflow and usability it would make more sense to use node editor selection. But this is also far less transparent, you can still have multiple node editors with different shaders being edited, and node groups also have to be taken into account, leading to long chains of "active elements" in the context that define the ultimate selection.

This issue was referenced by 1161b00c76

This issue was referenced by 1161b00c76d71f277f7d6bb774d4dc663a4d5a53

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1161b00c76.

Closed by commit 1161b00c76.
Author

Awesome, thank you :)

Awesome, thank you :)
Sign in to join this conversation.
6 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#40658
No description provided.