Fix T40658: UV map node not working for GLSL materials.