source/blender/nodes/shader/nodes/node_shader_uvmap.c
@@ -42,6 +42,14 @@ static void node_shader_init_uvmap(bNodeTree *UNUSED(ntree), bNode *node)
 	node->storage = attr;
 }
 
+static int node_shader_gpu_uvmap(GPUMaterial *mat, bNode *node, bNodeExecData *UNUSED(execdata), GPUNodeStack *in, GPUNodeStack *out)
+{
+	NodeShaderUVMap *attr = node->storage;
+	GPUNodeLink *mtface = GPU_attribute(CD_MTFACE, attr->uv_map);
+
+	return GPU_stack_link(mat, "node_uvmap", in, out, mtface);
+}
+
 /* node type definition */
 void register_node_type_sh_uvmap(void)
 {
@@ -53,6 +61,7 @@ void register_node_type_sh_uvmap(void)
 	node_type_size_preset(&ntype, NODE_SIZE_MIDDLE);
 	node_type_init(&ntype, node_shader_init_uvmap);
 	node_type_storage(&ntype, "NodeShaderUVMap", node_free_standard_storage, node_copy_standard_storage);
+	node_type_gpu(&ntype, node_shader_gpu_uvmap);
 
 	nodeRegisterType(&ntype);
 }
